Fixed total price align bottom

--- a/CSS/superCSS.css
+++ b/CSS/superCSS.css
@@ -47,3 +47,9 @@ hr {
    top: 50%;
    transform: translateY(-50%);
 }
+
+#container h3{
+    position:absolute;
+    bottom:0;
+    left:0;
+}
